# grocy-importer

./: .gitignore  .gitlab-ci.yml  .mypy.ini  .pylintrc  Makefile  README.rst  config.ini  config.ini.example  flake.nix  grocy-importer.py  grocy_importer.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: run-tests.yml
stubs/: argcomplete.pyi  sh.pyi  shtab.pyi
tests/: README.rst  userfields-missing-entity.yml  userfields-missing-id.yml  userfields.yml
tests/setup/: todo.cfg  todo.txt.orig
tests/setup/actions.d/: chore
tests/setup/grocy-importer/: config.ini
