[metadata]
name = grocy_importer
version = 0.1
author = Adam Schmalhofer
author_email = code@adaschma.name
description = Help importing into and from Grocy
long_description = file: README.rst
keywords = grocy, todo.txt
license = MIT

[options]
scripts = grocy_importer.py
install_requires = file: requires.txt

[tox:tox]
envlist = py311

[testenv]
deps = 
    bs4
    requests
    marshmallow
    appdirs
    argcomplete
    rstcheck
    flake8

commands =
    python -mdoctest grocy_importer.py

[testenv:type]
deps =
    mypy>=1.0
    types-beautifulsoup4
    types-requests
    types-appdirs
commands = mypy --strict grocy_importer.py

[testenv:rst]
commands = rstcheck README.rst

[testenv:clitest]
allowlist_externals =
    clitest
    cp
commands =
    cp tests/setup/todo.txt.orig tests/setup/todo.txt
    clitest --prefix 4 --pre-flight "alias todo-txt='todo-txt -d tests/setup/todo.cfg -p'" README.rst

[testenv:flake]
commands = flake8 grocy_importer.py
